--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 <a href="https://www.facebook.com/ASideofDrag/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Facebook_icon.svg/1024px-Facebook_icon.svg.png" width="5%"></a>
 
 <br><br>
-&nbsp;&nbsp;&nbsp;<img src="images/Harry-Potter-SQ.png" class="w3-round" width="25%"> <img src="images/AprilFoolsSQ2.png" width="25%"> <img src="images/kennedy.png" width="25%"><br>
+&nbsp;&nbsp;&nbsp;<img src="images/Harry-Potter-SQ.png" class="w3-round" width="25%"> <img src="images/AprilFoolsSQ2.png" width="25%"> <img src="images/Kennedy.png" width="25%"><br>
 &nbsp;&nbsp;&nbsp;<a href="https://www.prekindle.com/event/32992-mother-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
 
  <a href="https://www.prekindle.com/event/32992-mother-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
