--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 	</hr>
 <header>
 
-	<img src="images/header.png" width="100%">
+	<img src="images/top2.png" width="100%">
 	
   <div class="container flex-column">
 		<strong>Brunch is the most important meal of the day. And a drag show is the most important show of the evening. So why not put them together?<br><br>You're invited to <b> A BRUCH OF QUEENS!</b> Hosted by local drag professionals at different venues throughout DFW, A Brunch Of Queens will be an unforgettable event every-time!<strong>
