--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 &nbsp;&nbsp;&nbsp;<img src="images/Harry-Potter-SQ.png" class="w3-round" width="25%"> <img src="images/AprilFoolsSQ2.png" class="w3-round" width="25%"> <img src="images/Kennedy.png" class="w3-round" width="25%"><br>
 &nbsp;&nbsp;&nbsp;<a href="https://www.prekindle.com/event/32992-mother-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
 
- <a href="https://www.prekindle.com/event/32992-mother-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
+ <a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano"><img src="images/tickets.png" width="25%"></a>
  <a href="index.html"><img src="images/soon.png" width="25%"></a>
  <hr class="my-4" id="brunch">
 	</hr>
@@ -84,7 +84,7 @@ body {
             <div class="card-body">
               <h5 class="card-title">PRIDE WITH SASHA COLBY</h5>
               <p class="card-text">Celebrate PRIDE 2023 with RuPaul's Drag Race Season 15 Winner, SASHA COLBY!</p>
-              <a href="https://www.prekindle.com/events/legacy-hall"><i class="fa-solid fa-circle-info"></i> MORE INFO</a>
+              <a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano"><i class="fa-solid fa-circle-info"></i> MORE INFO</a>
             </div>
           </div>
         </div>
