--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ body {
 <a href="https://www.facebook.com/ASideofDrag/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Facebook_icon.svg/1024px-Facebook_icon.svg.png" width="5%"></a>
 
 <br><br>
-&nbsp;&nbsp;&nbsp;<img src="images/Harry-Potter-SQ.png" class="w3-round" width="25%"> <img src="images/AprilFoolsSQ2.png" class="w3-round" width="25%"> <img src="images/Kennedy.png" class="w3-round" width="25%"><br>
-&nbsp;&nbsp;&nbsp;<a href="https://www.prekindle.com/event/32992-mother-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
+&nbsp;&nbsp;&nbsp;<img src="images/AprilFoolsSQ2.png" class="w3-round" width="25%"> <img src="images/AprilFoolsSQ2.png" class="w3-round" width="25%"> <img src="images/KennedyDavenport_SQ.png" class="w3-round" width="25%"><br>
+&nbsp;&nbsp;&nbsp;<a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano"><img src="images/tickets.png" width="25%"></a>
 
- <a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano"><img src="images/tickets.png" width="25%"></a>
- <a href="index.html"><img src="images/soon.png" width="25%"></a>
+ <a href="https://www.prekindle.com/event/57176-pride-drag-brunch-featuring-kennedy-davenport-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
+ <a href="index.html"><img src="images/July4_SOON.png" width="25%"></a>
  <hr class="my-4" id="brunch">
 	</hr>
 <header>
@@ -70,21 +70,21 @@ body {
 		
 		    <div class="col-md-4 pb-1 pb-md-0" id="pop1">
           <div class="card1">
-            <img class="card-img-top" src="images/Harry-Potter-SQ.png" alt="Card image cap">
+            <img class="card-img-top" src="images/AprilFoolsSQ2.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title"><b><small>MOTHER! Drag Brunch At Legacy Hall</small></b></h5>
-              <p class="card-text">SHE'S NOT A REGULAR MOM, SHE'S A COOL MOM! Come celebrate the greatest mothers of all time with BRUNCH Saturday May 13th!</p>
-              <a href="https://www.prekindle.com/event/32992-mother-drag-brunch-at-legacy-hall-plano" ><i class="fa-solid fa-circle-info"></i> MORE INFO</a>
+              <h5 class="card-title"><b><small>PRIDE WITH SASHA COLBY</small></b></h5>
+              <p class="card-text">Celebrate PRIDE 2023 with RuPaul's Drag Race Season 15 Winner, SASHA COLBY!</p>
+              <a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano" ><i class="fa-solid fa-circle-info"></i> MORE INFO</a>
             </div>
           </div>
         </div>
 		        <div class="col-md-4 pb-1 pb-md-0" id="pop2">
           <div class="card2">
-            <img class="card-img-top" src="images/AprilFoolsSQ2.png" alt="Card image cap">
+            <img class="card-img-top" src="images/KennedyDavenport_SQ.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">PRIDE WITH SASHA COLBY</h5>
-              <p class="card-text">Celebrate PRIDE 2023 with RuPaul's Drag Race Season 15 Winner, SASHA COLBY!</p>
-              <a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano"><i class="fa-solid fa-circle-info"></i> MORE INFO</a>
+              <h5 class="card-title">Pride Drag Brunch ft. Kennedy Davenport at Legacy Hall</h5>
+              <p class="card-text">Join Legacy Hall in celebrating pride month with KENNEDY DAVENPORT from RuPaul's Drag Race on Saturday June 10th!</p>
+              <a href="https://www.prekindle.com/event/57176-pride-drag-brunch-featuring-kennedy-davenport-at-legacy-hall-plano"><i class="fa-solid fa-circle-info"></i> MORE INFO</a>
             </div>
           </div>
         </div>
