--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ body {
 <a href="https://www.facebook.com/ASideofDrag/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Facebook_icon.svg/1024px-Facebook_icon.svg.png" width="5%"></a>
 
 <br><br>
-&nbsp;&nbsp;&nbsp;<img src="images/AprilFoolsSQ2.png" class="w3-round" width="25%"> <img src="images/KennedyDavenport_SQ.png" class="w3-round" width="25%"> <img src="images/July4_SOON.png" class="w3-round" width="25%"><br>
-&nbsp;&nbsp;&nbsp;<a href="https://www.prekindle.com/event/74871-pride-kick-off-featuring-sasha-colby-plano"><img src="images/tickets.png" width="25%"></a>
+&nbsp;&nbsp;&nbsp;<img src="images/HocusPocusBrunch2_SQ.png" class="w3-round" width="25%"> <img src="images/images/SpiceWorldSQUARE.png" class="w3-round" width="25%"> <img src="images/images/AprilFoolsSQ2.png" class="w3-round" width="25%"><br>
+&nbsp;&nbsp;&nbsp;<a href="https://www.prekindle.com/event/71295-hocus-pocus-2-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
 
- <a href="https://www.prekindle.com/event/57176-pride-drag-brunch-featuring-kennedy-davenport-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
+ <a href="https://www.prekindle.com/event/71295-hocus-pocus-2-drag-brunch-at-legacy-hall-plano"><img src="images/tickets.png" width="25%"></a>
  <a href="index.html"><img src="images/soon.png" width="25%"></a>
  <hr class="my-4" id="brunch">
 	</hr>
