--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="shadows">
 <div class="all">
 <div class="full-field-color-bar"> <div class="page">
-<br><br>   <center><img src="https://i.ibb.co/93sF4Dh/BRUNCHLOGO.png" width="50%">  </center> <br>   <center><img src="https://i.ibb.co/N1D6VbX/Spice-Girls2-Logo.png" width="95%"></center>
+<br><br>   <center><img src="https://i.ibb.co/93sF4Dh/BRUNCHLOGO.png" width="50%">  </center> <br>   <center><img src="/images/SpiceGirlsLogo.png" width="95%"></center>
    <center> <img src="https://i.ibb.co/FBWxmRz/date2.png" width="45%"><br><br><br>
      <img src="https://i.ibb.co/wRHBGJX/Button-Soon.png" width="75%"> <br><br><br><br><img src="https://i.ibb.co/rfJTsyK/LEGACY-HALL.png" width="35%">
    <br><br>  <br><br>
