--- a/index.html
+++ b/index.html
@@ -7,13 +7,36 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
+
+<!-- Primary Meta Tags -->
+<title>A Brunch Of Queens - Spice Girls Brunch </title>
+<meta name="title" content="A Brunch Of Queens - Spice Girls Brunch " />
+<meta name="description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://asideofdrag.com/" />
+<meta property="og:title" content="A Brunch Of Queens - Spice Girls Brunch " />
+<meta property="og:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+<meta property="og:image" content="images/SpiceUpYourBrunchWide.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="http://asideofdrag.com/" />
+<meta property="twitter:title" content="A Brunch Of Queens - Spice Girls Brunch " />
+<meta property="twitter:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+<meta property="twitter:image" content="images/SpiceUpYourBrunchWide.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="shadows">
 <div class="all">
 <div class="full-field-color-bar"> <div class="page">
-<br><br>   <center><img src="https://i.ibb.co/93sF4Dh/BRUNCHLOGO.png" width="50%">  </center> <br>   <center><img src="/images/SpiceGirlsLogo.png" width="95%"></center>
+<br><br>   <center><img src="https://i.ibb.co/93sF4Dh/BRUNCHLOGO.png" width="50%">  </center> <br>   <center><img src="images/SpiceGirlsLogo.png" width="95%"></center>
    <center> <img src="https://i.ibb.co/FBWxmRz/date2.png" width="45%"><br><br><br>
      <img src="https://i.ibb.co/wRHBGJX/Button-Soon.png" width="75%"> <br><br><br><br><img src="https://i.ibb.co/rfJTsyK/LEGACY-HALL.png" width="35%">
    <br><br>  <br><br>
