--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="full-field-color-bar"> <div class="page">
 <br><br>   <center><img src="https://i.ibb.co/93sF4Dh/BRUNCHLOGO.png" width="50%">  </center> <br>   <center><img src="images/SpiceGirlsLogo.png" width="95%"></center>
    <center> <img src="https://i.ibb.co/FBWxmRz/date2.png" width="45%"><br><br><br>
-     <img src="images/GetTixNow.png" width="75%"> <br><br><br><br><img src="https://i.ibb.co/rfJTsyK/LEGACY-HALL.png" width="35%">
+     <a href="https://www.prekindle.com/promo/id/533047295682757737"><img src="images/GetTixNow.png" width="75%"></a> <br><br><br><br><img src="https://i.ibb.co/rfJTsyK/LEGACY-HALL.png" width="35%">
    <br><br>  <br><br>
      <img src="https://i.ibb.co/zP1jMfG/Designs.png" width="55%">
    </center>
