--- a/index.html
+++ b/index.html
@@ -2,50 +2,48 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>A Brunch Of Queens - Spice Girls Brunch </title>
+  <title>CodePen - A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO MAY 30th</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
-
-
-<!-- Primary Meta Tags -->
-<title>A Brunch Of Queens - Spice Girls Brunch </title>
-<meta name="title" content="A Brunch Of Queens - Spice Girls Brunch " />
-<meta name="description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://asideofdrag.com/" />
-<meta property="og:title" content="A Brunch Of Queens - Spice Girls Brunch " />
-<meta property="og:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
-<meta property="og:image" content="images/SpiceUpYourBrunchWide.png" />
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="http://asideofdrag.com/" />
-<meta property="twitter:title" content="A Brunch Of Queens - Spice Girls Brunch " />
-<meta property="twitter:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
-<meta property="twitter:image" content="images/SpiceUpYourBrunchWide.png" />
-
-<!-- Meta Tags Generated with https://metatags.io -->
-
+<script src="https://kit.fontawesome.com/1f9ab20cf7.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="shadows">
-<div class="all">
-<div class="full-field-color-bar"> <div class="page">
-<br><br>   <center><img src="https://i.ibb.co/93sF4Dh/BRUNCHLOGO.png" width="50%">  </center> <br>   <center><img src="images/SpiceGirlsLogo.png" width="95%"></center>
-   <center> <img src="https://i.ibb.co/FBWxmRz/date2.png" width="45%"><br><br><br>
-     <a href="https://www.prekindle.com/promo/id/533047295682757737"><img src="images/GetTixNow.png" width="75%"></a> <br><br><br><br><img src="https://i.ibb.co/rfJTsyK/LEGACY-HALL.png" width="35%">
-   <br><br>  <br><br>
-     <img src="https://i.ibb.co/zP1jMfG/Designs.png" width="55%">
-   </center>
-   <br><br><br><br><br>
-  </div>
-  </div></div></div>
+<!-- logo -->
+
+<div class="card3"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://asideofdrag.com/images/BrunchQueens.png" alt="Vanjie Pride Logo" width="80%" border="0"></div>
+<br>
+
+<div class="card2">
+  &nbsp;<img src="https://i.ibb.co/FqqF0zs/new.png" alt="Vanjie Pride Logo" width="5%" border="0">
+  <!-- pride -->
+  <a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://asideofdrag.com/images/PrideLogo.png" alt="Vanjie Pride Logo" width="30%" border="0"></a>
+
+  <!-- SPice -->
+  <a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceGirls2Logo.png" alt="Spice Girls" width="30%" border="0"></a>
+
+</div>
+<br>
+<div class="card" data-state="#about"><a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://i.ibb.co/v1FTRz8/Vanjie-Site.png" width="100%"></a></div>
+
+<div class="card2">
+  <!-- pride -->
+  &nbsp;&nbsp; <a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://asideofdrag.com/images/PrideLogo.png" alt="Vanjie Pride Logo" width="30%" border="0"></a>
+
+  <!-- SPice -->
+  <a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceGirls2Logo.png" alt="Spice Girls" width="30%" border="0"></a>
+
+  <!-- SPice -->
+  <a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/new_HolidaysAtLegacy_Logo.png" alt="holidays" width="30%" border="0"></a>
+
+</div>
+<br>
+<div class="card4" data-state="#about"><a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceUpYourBrunchStory.png" width="100%"></a></div>
 <!-- partial -->
-  
+  <script  src="./script.js"></script>
+
 </body>
 </html>
