--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO MAY 30th</title>
+
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel="stylesheet" href="./style.css">
+
+
+<!-- Primary Meta Tags -->
+<title>A Brunch Of Queens - Spice Girls Brunch </title>
+<meta name="title" content="A Brunch Of Queens - Spice Girls Brunch " />
+<meta name="description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://asideofdrag.com/" />
+<meta property="og:title" content="A Brunch Of Queens - Spice Girls Brunch " />
+<meta property="og:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+<meta property="og:image" content="images/SpiceUpYourBrunchWide.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="http://asideofdrag.com/" />
+<meta property="twitter:title" content="A Brunch Of Queens - Spice Girls Brunch " />
+<meta property="twitter:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+<meta property="twitter:image" content="images/SpiceUpYourBrunchWide.png" />
+  
 <script src="https://kit.fontawesome.com/1f9ab20cf7.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
