--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO MAY 30th</title>
+  <title>A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO - MAY 30th</title>
 
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,22 +12,22 @@
 
 <!-- Primary Meta Tags -->
 <title>A Brunch Of Queens - Spice Girls Brunch </title>
-<meta name="title" content="A Brunch Of Queens - Spice Girls Brunch " />
-<meta name="description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
+<meta name="title" content="A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO " />
+<meta name="description" content="Get ready to sashay the night away at Legacy Hall's fabulous Pride Month kickoff! " />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://asideofdrag.com/" />
-<meta property="og:title" content="A Brunch Of Queens - Spice Girls Brunch " />
-<meta property="og:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
-<meta property="og:image" content="images/SpiceUpYourBrunchWide.png" />
+<meta property="og:title" content="A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO" />
+<meta property="og:description" content="Get ready to sashay the night away at Legacy Hall's fabulous Pride Month kickoff! " />
+<meta property="og:image" content="images/VanjiePrideWide.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="http://asideofdrag.com/" />
-<meta property="twitter:title" content="A Brunch Of Queens - Spice Girls Brunch " />
-<meta property="twitter:description" content="Spice up your life with a Spice Girls Drag Brunch at Legacy Hall, April 20th!" />
-<meta property="twitter:image" content="images/SpiceUpYourBrunchWide.png" />
+<meta property="twitter:title" content="A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO" />
+<meta property="twitter:description" content="Get ready to sashay the night away at Legacy Hall's fabulous Pride Month kickoff! " />
+<meta property="twitter:image" content="images/VanjiePrideWide.png" />
   
 <script src="https://kit.fontawesome.com/1f9ab20cf7.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
