--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <meta property="og:url" content="http://asideofdrag.com/" />
 <meta property="og:title" content="A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO" />
 <meta property="og:description" content="Get ready to sashay the night away at Legacy Hall's fabulous Pride Month kickoff! " />
-<meta property="og:image" content="images/VanjiePrideWide.png" />
+<meta property="og:image" content="https://asideofdrag.com/images/VanjiePrideWide.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="http://asideofdrag.com/" />
 <meta property="twitter:title" content="A Brunch Of Queens - PRIDE BRUNCH with VANESSA VANJIE MATEO" />
 <meta property="twitter:description" content="Get ready to sashay the night away at Legacy Hall's fabulous Pride Month kickoff! " />
-<meta property="twitter:image" content="images/VanjiePrideWide.png" />
+<meta property="twitter:image" content="https://asideofdrag.com/images/VanjiePrideWide.png" />
   
 <script src="https://kit.fontawesome.com/1f9ab20cf7.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
