--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <!-- partial:index.partial.html -->
 <!-- logo -->
 
-<div class="card3"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://asideofdrag.com/images/BrunchQueens.png" alt="Vanjie Pride Logo" width="80%" border="0"></div>
+<div class="logo"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://asideofdrag.com/images/BrunchQueens.png" alt="Vanjie Pride Logo" width="80%" border="0"></div>
 <br>
 
-<div class="card2">
+<div class="PastBrunch">
   &nbsp;<img src="https://i.ibb.co/FqqF0zs/new.png" alt="Vanjie Pride Logo" width="5%" border="0">
   <!-- pride -->
   <a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://asideofdrag.com/images/PrideLogo.png" alt="Vanjie Pride Logo" width="30%" border="0"></a>
@@ -52,9 +52,10 @@
 
 </div>
 <br>
+<br>
 <div class="card" data-state="#about"><a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://i.ibb.co/v1FTRz8/Vanjie-Site.png" width="100%"></a></div>
-
-<div class="card2">
+<br><br>
+<div class="PastBrunch">
   <!-- pride -->
   &nbsp;&nbsp; <a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://asideofdrag.com/images/PrideLogo.png" alt="Vanjie Pride Logo" width="30%" border="0"></a>
 
