--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <a href="https://www.prekindle.com/event/88441-pride-at-legacy-hall-featuring-vanessa-vanjie-mateo-plano"><img src="https://asideofdrag.com/images/PrideLogo.png" alt="Vanjie Pride Logo" width="30%" border="0"></a>
 
   <!-- SPice -->
-  <a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceGirls2Logo.png" alt="Spice Girls" width="30%" border="0"></a>
+  <a href="#second"><img src="https://asideofdrag.com/images/SpiceGirls2Logo.png" alt="Spice Girls" width="30%" border="0"></a>
 
 </div>
 <br>
@@ -67,7 +67,7 @@
 
 </div>
 <br>
-<div class="card4" data-state="#about"><a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceUpYourBrunchStory.png" width="100%"></a></div>
+<div id=“second” class="card4" data-state="#about"><a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceUpYourBrunchStory.png" width="100%"></a></div>
 <!-- partial -->
   <script  src="./script.js"></script>
 
