--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 </div>
 <br>
-<div id=“second” class="card4" data-state="#about"><a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceUpYourBrunchStory.png" width="100%"></a></div>
+<div class="card4" data-state="#about"><p id="second"></p><a href="https://www.prekindle.com/event/53126-spice-world-drag-brunch-at-legacy-hall-plano"><img src="https://asideofdrag.com/images/SpiceUpYourBrunchStory.png" width="100%"></a></div>
 <!-- partial -->
   <script  src="./script.js"></script>
 
